<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lyt_bill_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/rowHeight"
        android:paddingTop="@dimen/element_margin"
        android:paddingBottom="@dimen/element_margin"
        android:background="?attr/colorPrimary">
        <Button
            android:id="@+id/btn_bill_return"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/element_margin"
            android:background="@android:color/transparent"
            android:gravity="left|center_vertical"

            android:text="@string/action_return"
            android:textColor="?attr/colorButtonNormal" />
        <TextView
            android:id="@+id/txt_bill_headertext"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:textColor="@android:color/white"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorAccent"></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/element_margin"
        android:paddingBottom="@dimen/element_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_bill_paymentlable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/action_payments" />

        <TextView
            android:id="@+id/txt_bill_costlable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/action_costs" />

        <TextView
            android:id="@+id/txt_bill_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/action_title" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark"></View>
    <ListView
        android:id="@+id/lsv_bill_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

    </ListView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorAccent"></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        >

        <TextView
            android:id="@+id/txt_bill_sumpayment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="0" />

        <TextView
            android:id="@+id/txt_bill_sumcosts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="0" />

        <TextView
            android:id="@+id/txt_bill_sumlable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/Sum" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/rowHeight"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/txt_bill_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="22sp"
            android:layout_gravity="center"
            android:text="0" />

        <TextView
            android:id="@+id/txt_bill_amounttitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="22sp"
            android:layout_gravity="center"
             />
    </LinearLayout>
</LinearLayout>